<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:onClick="onClick"
    android:orientation="vertical"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_margin="@dimen/x15"
            android:background="@drawable/backbtn"
            android:padding="@dimen/x20" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.app.court.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/x2"
                android:text="@string/forgot_passwords"
                android:textColor="@color/black"
                android:textSize="@dimen/x18"
                app:typeface="@string/font_bold" />

            <com.app.court.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginEnd="@dimen/x40"
                android:layout_marginStart="@dimen/x40"
                android:layout_marginTop="@dimen/x20"
                android:gravity="center"
                android:text="@string/enter_your_email_address_and_we_ll_send_you_a_code_to_reset_your_password"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

            <com.app.court.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/x60"
                android:layout_marginRight="@dimen/x60"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/x18"
                app:typeface="@string/font_normal" />

            <com.app.court.ui.views.AnyEditTextView
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x30"
                android:layout_marginLeft="@dimen/x60"
                android:layout_marginRight="@dimen/x60"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/email_address"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/light_grey"
                android:textColorHint="@color/light_grey"
                android:textSize="@dimen/x14"
                app:testType="email"
                app:typeface="@string/font_normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:layout_marginEnd="@dimen/x60"
                android:layout_marginStart="@dimen/x60"
                android:alpha="0.3"
                android:background="@color/light_grey" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginEnd="@dimen/x50"
                android:layout_marginStart="@dimen/x50"
                android:layout_marginTop="@dimen/x30"
                android:background="@drawable/rounded_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/x18" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>