<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:onClick="onClick"
    android:orientation="vertical"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_margin="@dimen/x15"
            android:background="@drawable/backbtn"
            android:padding="@dimen/x20" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:gravity="center">

            <com.app.court.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/x2"
                android:text="@string/enter_verification"
                android:textColor="@color/black"
                android:textSize="@dimen/x18"
                app:typeface="@string/font_bold" />

            <com.app.court.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/x10"
                android:text="@string/enter_4_digit_code_here"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/x18"
                app:typeface="@string/font_normal" />

            <com.app.court.ui.views.PinEntryEditText
                android:id="@+id/txt_pin_entry"
                android:layout_width="@dimen/x250"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x20"
                android:layout_marginBottom="@dimen/x20"
                android:background="@null"
                android:cursorVisible="false"
                app:pinBackgroundDrawable="@drawable/invite_boarder"
                app:pinTextBottomPadding="@dimen/x20"
                android:digits="1234567890"
                android:focusableInTouchMode="true"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4"
                android:paddingTop="@dimen/x50"
                android:paddingBottom="@dimen/x10"
                android:textColor="@color/light_grey"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:visibility="visible"
                app:pinLineColors="@color/transparent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/x10"
                android:gravity="center"
                android:orientation="horizontal">

                <com.app.court.ui.views.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/x2"
                    android:text="@string/didn_t_get_a_code_yet"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/x14"
                    app:typeface="@string/font_normal" />

                <com.app.court.ui.views.AnyTextView
                    android:id="@+id/tv_resend_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x2"
                    android:text="@string/resend_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/x14"
                    app:typeface="@string/font_bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginEnd="@dimen/x30"
                android:layout_marginStart="@dimen/x30"
                android:layout_marginTop="@dimen/x10"
                android:background="@drawable/rounded_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/x18" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>