<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.app.court.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/x10"
            android:alpha="0.8"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/subject_of_case"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <com.app.court.ui.views.AnyEditTextView
            android:id="@+id/edt_subject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/subjects"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/x14"
            app:testType="nocheck"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:background="@color/light_grey" />

        <com.app.court.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/x20"
            android:alpha="0.8"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x120"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/x5"
            android:background="@drawable/rectangle">

            <com.app.court.ui.views.AnyEditTextView
                android:id="@+id/edt_write_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/write_here"
                android:imeOptions="actionNext"
                android:inputType="text|textMultiLine|textCapSentences"
                android:maxLength="260"
                android:maxLines="6"
                android:paddingBottom="@dimen/x2"
                android:paddingEnd="@dimen/x5"
                android:paddingStart="@dimen/x5"
                android:paddingTop="@dimen/x2"
                android:textColor="@color/light_grey"
                android:textColorHint="@color/light_grey"
                android:textSize="@dimen/x14"
                app:testType="nocheck"
                app:typeface="@string/font_normal" />

        </LinearLayout>

        <com.app.court.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/x20"
            android:alpha="0.8"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/attachment"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <com.app.court.ui.views.AnyTextView
            android:id="@+id/tv_attachment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:drawableRight="@drawable/attachment"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/attached_file"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAttachedDocs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/x10" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:background="@color/light_grey" />

        <Button
            android:id="@+id/btn_submit_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/x30"
            android:layout_marginEnd="@dimen/x40"
            android:layout_marginStart="@dimen/x40"
            android:layout_marginTop="@dimen/x20"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/x18" />
    </LinearLayout>
</ScrollView>