<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/searchbar"
        android:layout_margin="@dimen/x20"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <com.app.court.ui.views.AnyEditTextView
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/x10"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/x14"
            app:testType="nocheck"
            app:typeface="@string/font_normal" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/x15"
            android:layout_weight="0.15"
            android:src="@drawable/search"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <com.app.court.ui.views.AnyTextView
        android:id="@+id/txt_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_message_thread_found"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x15"
        android:visibility="gone"
        app:typeface="Roboto-Regular.ttf"
        />

    <ListView
        android:id="@+id/lv_messages_thread"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:scrollbars="none"/>

</LinearLayout>